added things to Todo.txt

--- a/Raylib-Pallanguzhi/Todo.txt
+++ b/Raylib-Pallanguzhi/Todo.txt
@@ -1,2 +1,4 @@
-- Initialize the bead positions 
-- Render the beads 
+- Draw selection marker for the slot.
+- Get input from keys and move around the selection marker.
+- When a slot is selected by using enter perform move.
+- Stop drawing the marker, set the game state to animating move and perform the animation.
