Mouse input for player move and retry bug fix

--- a/Raylib-Pallanguzhi/Todo.txt
+++ b/Raylib-Pallanguzhi/Todo.txt
@@ -1,5 +1,4 @@
-- Display winner of game, and give options to retry
-- Need Home menu
+- Add BG for home Menu
 - Pause Menu
 - Get Touch input for the beads (Mouse click)
 - Add audio for click and distribution of beads, add BG music 
