--- a/Raylib-Pallanguzhi/Todo.txt
+++ b/Raylib-Pallanguzhi/Todo.txt
@@ -1,4 +1,3 @@
-- Add BG for home Menu
-- Pause Menu
+- Pause Menu (Later)
 - Add audio for click and distribution of beads, add BG music 
 - Build for android
