--- a/Raylib-Pallanguzhi/Todo.txt
+++ b/Raylib-Pallanguzhi/Todo.txt
@@ -1,11 +1,9 @@
 - Pause Menu (Later)
+- Sign and release an apk in github
+	- aab for playstore?
 - Add BG music
     - Involves learning a DAW
-- Language selection screen
-    - Tamil font Rendering
-    - build for android
-- Add save for highscore and as well as langugage selection
-- Add Tamil font for rendering
+- Add save for highscores
 - Multiplayer
     - Server Code
     - Multiplayer compatible client code
